    escape sequence, but by handling concatenation of regular expressions. The
    parser/inc/regexoreof file now contains an additional rule _regex_unit,
    which handles the regex _units, possibly quantified, and their
    concatenations, while _regex handles a _regex_unit and the operators | and
    / that can be used to combine regular expressions. 

  * The //include filename facility was not recognized in previous
    releases. It's now supported (cf. man flexc++input, FILE SWITCHING)

flexc++ (2.02.00)

  * Wopke Hellinga and Mark Redeman noticed that flexc++ reported an error if
    the last line of a rule definition does not end in a newline. This bug was
    fixed in this release. 

  * Added the file 'required' to the source distribution summarizing the
    required software for building flexc++, dropped the file 'build-depends'.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 13 Mar 2015 16:40:13 +0100

flexc++ (2.01.00)

  * The algorithm to determine which rules are viable was changed. Now a
    rule's viability is determined from the generated DFAs: rules matched at
    DFA rows are now removed from a set of all rule indices. If any elements
    remain, then those rules cannot be matched. See also the section about
    'Finding non-viable rules' in the manual's technical documentation.

  * Generating files is prevented when errors in option/declaration
    specifications are encountered. All errors in option/declaration
    specifications (instead of just the first error that is encountered) 
    are now reported.

  * A warning is issued if an existing scanner.h file does not contain 'void
    postCode(PostEnum__'. The warning also offers an advice to add the
    required declaration/definition (showing the required code) to the
    scanner.h file.
    
  * References to line numbers of rules should now be correct, and should
    refer to the line number where the rule's regex is specified.
